correção da amostra2

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <div class="container">
         <div class="section-one">
             <div class="apresentation">
-                <span class="apresentation-Ola fade-in-left">Olá, mundo!</span>
+                <span class="apresentation-Ola fade-in-left">Olá, mundo!<span class="animate-flicker ">|</span></span>
                 <span class="apresentation-eusou fade-in-left2">
                     Eu sou <br>Fabiano Antero
                 </span>
-                <p class="apresentation-about fade-in-left3">Sou um Designer de UI&UX apaixonado por criar experiências
-                    digitais excepcionais. Minha habilidade em unir forma e função, evidenciada em meu portfólio,
-                    destaca-me
-                    como profissional pronto para elevar seus projetos. Estou ansioso para colaborar e construir
-                    experiências notáveis juntos.</p>
+                <p class="apresentation-about fade-in-left3">
+                    Designer de UI&UX apaixonado por transformar visões em experiências memoráveis. 
+                    Com habilidades distintas em unir estética e usabilidade, estou pronto para dar
+                    vida aos seus projetos de forma impactante.    
+                </p>
                 <span class="fade-in-left4">
 
                     <a class="apresentation-buttom" href="https://www.linkedin.com/in/fabianoantero/"
@@ -30,9 +30,274 @@
                         comigo <img class="apresentation-send" src="img/send.svg" alt="" srcset=""></a>
                 </span>
             </div>
-            <div class="photo">
-                <img class="photo-eu fade-in-top" src="img/eu.svg" alt="">
+            <div class="cardHero">
+                <div class="container-grid text-focus-in">
+                    <div id="item-0">
+                    </div>
+                    <div id="item-1">
+                        <div class="container-uxid">
+                            <div class="cardHero-uxid">
+                                <div class="cardHero-shapeUX">
+                                    <span class="cardHero-textShape">
+                                        UI
+                                    </span>
+                                </div>
+                                <span>
+                                    Usabilidade Visual
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="item-2">
+                        <div class="container-uxid">
+                            <div class="cardHero-uxid">
+                                <div class="cardHero-shapeUX">
+                                    <span class="cardHero-textShape">
+                                        UI
+                                    </span>
+                                </div>
+                                <span>
+                                    Prototipagem de Interface
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="item-3">
+                        <div class="container-uxid">
+                            <div class="cardHero-uxid">
+                                <div class="cardHero-shapeUX">
+                                    <span class="cardHero-textShape">
+                                        UX
+                                    </span>
+                                </div>
+                                <span>
+                                    Design de Interação
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="item-4">
+                        <div class="container-uxid">
+                            <div class="cardHero-uxid">
+                                <div class="cardHero-shapeUX">
+                                    <span class="cardHero-textShape">
+                                        UX
+                                    </span>
+                                </div>
+                                <span>
+                                    Documentação de Design
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="item-5">
+                        <div class="container-uxid">
+                            <div class="cardHero-uxid">
+                                <div class="cardHero-shapeUX">
+                                    <span class="cardHero-textShape">
+                                        UX
+                                    </span>
+                                </div>
+                                <span>
+                                    Arquitetura de Informação
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="item-6">
+                        <div class="container-uxid">
+                            <div class="cardHero-uxid">
+                                <div class="cardHero-shapeUX">
+                                    <span class="cardHero-textShape">
+                                        UX
+                                    </span>
+                                </div>
+                                <span>
+                                    Prototipagem
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="item-7">
+                        <div class="container-uxid">
+                            <div class="cardHero-uxid">
+                                <div class="cardHero-shapeUX">
+                                    <span class="cardHero-textShape">
+                                        UX
+                                    </span>
+                                </div>
+                                <span>
+                                    Testes de Usabilidade
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="item-8">
+                        <div class="container-uxid">
+                            <div class="cardHero-uxid">
+                                <div class="cardHero-shapeUX">
+                                    <span class="cardHero-textShape">
+                                        UI
+                                    </span>
+                                </div>
+                                <span>
+                                    Design Visual
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="item-9">
+                        <div class="container-uxid">
+                            <div class="cardHero-uxid">
+                                <div class="cardHero-shapeUX">
+                                    <span class="cardHero-textShape">
+                                        UI
+                                    </span>
+                                </div>
+                                <span>
+                                    Elementos de Interface
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="item-10">
+                        <div class="container-uxid">
+                            <div class="cardHero-uxid">
+                                <div class="cardHero-shapeUX">
+                                    <span class="cardHero-textShape">
+                                        UI
+                                    </span>
+                                </div>
+                                <span>
+                                    Estilo e Tema
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <!--
+            <div class="cardHero">
+                <div class="container-uxid">
+                    <div class="cardHero-uxid">
+                        <div class="cardHero-shapeUX">
+                            <span class="cardHero-textShape">
+                                UX
+                            </span>
+                        </div>
+                        <span>
+                            Arquitetura de Informação
+                        </span>
+                    </div>
+                </div>
+               <div class="container-uxid">
+                    <div class="cardHero-uxid">
+                        <div class="cardHero-shapeUX">
+                            <span class="cardHero-textShape">
+                                UX
+                            </span>
+                        </div>
+                        <span>
+                            Arquitetura de Informação
+                        </span>
+                    </div>
+                    <div class="cardHero-uxid">
+                        <div class="cardHero-shapeUX">
+                            <span class="cardHero-textShape">
+                                UX
+                            </span>
+                        </div>
+                        <span class="cardHero-text">
+                            Prototipagem
+                        </span>
+                    </div>
+                    <div class="cardHero-uxid">
+                        <div class="cardHero-shapeUX">
+                            <span class="cardHero-textShape">
+                                UX
+                            </span>
+                        </div>
+                        <span class="cardHero-text">
+                            Testes de Usabilidade
+                        </span>
+                    </div>
+                    <div class="cardHero-uxid">
+                        <div class="cardHero-shapeUX">
+                            <span class="cardHero-textShape">
+                                UX
+                            </span>
+                        </div>
+                        <span class="cardHero-text">
+                            Design de Interação
+                        </span>
+                    </div>
+                    <div class="cardHero-uxid">
+                        <div class="cardHero-shapeUX">
+                            <span class="cardHero-textShape">
+                                UX
+                            </span>
+                        </div>
+                        <span class="cardHero-text">
+                            Design Visual
+                        </span>
+                    </div>
+                </div>
+                <div class="container-photo">
+                    <img class="cardHero-photo fade-in-top" src="img/eu.svg" alt="">
+                </div>
+                <div class="container-uxid">
+                    <div class="cardHero-uxid">
+                        <div class="cardHero-shapeUX">
+                            <span class="cardHero-textShape">
+                                UX
+                            </span>
+                        </div>
+                        <span>
+                            Arquitetura de Informação
+                        </span>
+                    </div>
+                    <div class="cardHero-uxid">
+                        <div class="cardHero-shapeUX">
+                            <span class="cardHero-textShape">
+                                UX
+                            </span>
+                        </div>
+                        <span class="cardHero-text">
+                            Prototipagem
+                        </span>
+                    </div>
+                    <div class="cardHero-uxid">
+                        <div class="cardHero-shapeUX">
+                            <span class="cardHero-textShape">
+                                UX
+                            </span>
+                        </div>
+                        <span class="cardHero-text">
+                            Testes de Usabilidade
+                        </span>
+                    </div>
+                    <div class="cardHero-uxid">
+                        <div class="cardHero-shapeUX">
+                            <span class="cardHero-textShape">
+                                UX
+                            </span>
+                        </div>
+                        <span class="cardHero-text">
+                            Design de Interação
+                        </span>
+                    </div>
+                    <div class="cardHero-uxid">
+                        <div class="cardHero-shapeUX">
+                            <span class="cardHero-textShape">
+                                UX
+                            </span>
+                        </div>
+                        <span class="cardHero-text">
+                            Design Visual
+                        </span>
+                    </div>
+                </div>
+            </div> !-->
         </div>
         <div class="section-two">
 
