correção dos bugs de rensponsividade

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -11,10 +11,9 @@
 </head>
 
 <body>
-    <main>
         <div class="container">
             <section class="one">
-                <div class="apresentation">
+                <div class="apresentation ">
                     <span class="apresentation-Ola fade-in-left">Olá, mundo!<span
                             class="animate-flicker ">|</span></span>
                     <span class="apresentation-eusou fade-in-left2">
@@ -38,7 +37,7 @@
                     </div>
                 </div>
             </section>
-            <section class="two">
+            <div class="two">
                 <div class="two-container1">
                     <p class="two-title">
                         Skills & Experiência
@@ -303,8 +302,8 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="tree">
+            </div>
+            <div class="tree">
                 <div class="amostra">
                     <div>
                         <p class="amostra-title1">
@@ -319,9 +318,9 @@
                         <img class="fade-in-top design" src="img/antecipa.png" alt="">
                     </div>
                 </div>
-            </section>
+            </div>
         </div>
-    </main>
+
 </body>
 
 </html>
