correção dos bugs de rensponsividade

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fabiano UI&UX Designer</title>
-    <link rel="stylesheet" href="css/teste.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animation.css">
 </head>
 
@@ -14,22 +14,21 @@
         <div id="menu"></div>
         <section class="one space-around">
             <div class="apresentation center">
-                <div class="apresentation-title">
-                    <span class="fade-in-left">
+                <div class="apresentation-title fade-in-left">
+                    <span>
                         Olá, mundo!
                     </span>
                     <span class="animate-flicker">
                         |
                     </span>
                 </div>
-                <div class="apresentation-subTitle">
-
-                    <span class="fade-in-left2">
+                <div class="apresentation-subTitle fade-in-left2">
+                    <span>
                         Eu sou <br>Fabiano Antero
                     </span>
                 </div>
-                <div class="apresentation-about">
-                    <span class="fade-in-left3">
+                <div class="apresentation-about fade-in-left3">
+                    <span>
                         Designer de UI&UX apaixonado por transformar visões em experiências memoráveis.
                         Com habilidades distintas em unir estética e usabilidade, estou pronto para dar
                         vida aos seus projetos de forma impactante.
@@ -49,24 +48,24 @@
         </section>
         <section class="two space-around">
             <div class="two-container1">
-                <div class="two-title">
+                <div class="two-title fade-in-left">
                     <span>
                         Skills & <br> Experiência
                     </span>
                 </div>
-                <div class="two-subTitle">
+                <div class="two-subTitle fade-in-left2">
                     <span>
                         Bacharel em Ciência da Computação, atuando como UX/UI e desenvolvimento front-end. Transformo
                         ideias em experiências visuais envolventes, focado em soluções intuitivas para otimizar a
                         experiência do usuário.
                     </span>
                 </div>
-                <div class="container-buttom">
+                <div class="container-buttom fade-in-left3">
                     <a class="buttom"
                         href="https://www.dropbox.com/scl/fi/ysj1cy2zpup82b61gebvd/Fabiano-Antero-CV-08-12-2023.pdf?rlkey=1yofifslkon7ub46nt2gb00hl&dl=0"
                         target="_blank">Download CV<img class="icon" src="img/download.svg" alt="" srcset=""></a>
                 </div>
-                <div class="exper">
+                <div class="exper fade-in-left">
                     <div class="exper-title">
                         Experiência Profiscional
                     </div>
@@ -149,7 +148,7 @@
                     </a>
                 </div>
             </div>
-            <div class="two-container2">
+            <div class="two-container2 fade-in-right">
                 <div class="exper-title">
                     Experiência Acadêmica
                 </div>
