correção dos bugs de rensponsividade

--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
                         </div>
                     </div>
                 </a>
-                <div class="exper-titleAcad">
-                    Cursos e certificados
-                </div>
+                <p class="exper-titleAcad">
+                        Cursos e certificados
+                </p>
                 <a href="#" target="_blank">
                     <div class="exper-card">
                         <div class="exper-contIcon">
@@ -286,6 +286,62 @@
                         </div>
                     </div>
                 </a>
+            </div>
+        </section>
+        <section class="three">
+            <div class="three-title">
+                <span>
+                    Novo Portfólio em contrução
+                </span>
+            </div>
+            <div class="three-projetos">
+                <div>
+                    <p class="projetos-title">
+                        Projeto 01
+                    </p>
+                    <p class="projetos-SubTitle">
+                        Antecipa frete
+                    </p>
+                    <div class="container-projetosText">
+                        <p class="projetos-text">
+                            O setor de transporte de carga e frete desempenha um papel crucial na economia, conectando
+                            mercadorias aos consumidores e empresas. No entanto, os profissionais autônomos que realizam
+                            serviços de frete muitas vezes enfrentam desafios financeiros devido à demora no recebimento
+                            de pagamentos. O aplicativo "Antecipa Frete" foi desenvolvido para abordar essa questão,
+                            oferecendo uma solução inovadora para antecipar valores e melhorar a estabilidade financeira
+                            dos prestadores de serviços de frete.
+                        </p>
+
+                    </div>
+                </div>
+                <div class="projetos-img">
+                    <img src="img/Rectangle8.svg" alt="">
+                </div>
+            </div>
+            <div class="three-projetos">
+                <div class="projetos-img">
+                    <img src="img/Rectangle8.svg" alt="">
+                </div>
+                <div>
+                    <p class="projetos-title">
+                        Projeto 01
+                    </p>
+                    <p class="projetos-SubTitle">
+                        Antecipa frete
+                    </p>
+                    <div class="container-projetosText">
+                        <p class="projetos-text">
+                            O setor de transporte de carga e frete desempenha um papel crucial na economia, conectando
+                            mercadorias aos consumidores e empresas. No entanto, os profissionais autônomos que realizam
+                            serviços de frete muitas vezes enfrentam desafios financeiros devido à demora no recebimento
+                            de pagamentos. O aplicativo "Antecipa Frete" foi desenvolvido para abordar essa questão,
+                            oferecendo uma solução inovadora para antecipar valores e melhorar a estabilidade financeira
+                            dos prestadores de serviços de frete.
+                        </p>
+
+                    </div>
+                </div>
+
             </div>
         </section>
     </div>
