--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
                 <img class="photo text-focus-in" src="img/photo.svg" alt="" srcset="">
             </div>
             <div class="container-linkedin">
-                <img class="linkedin text-focus-in" src="img/linkedin.svg" alt="" srcset="">
+                <a href="https://www.linkedin.com/in/fabianoantero/" target="_blank">
+                    <img class="linkedin text-focus-in" src="img/linkedin.svg" alt="" srcset="">
+                </a>
             </div>
         </section>
         <section class="two space-around">
@@ -174,7 +176,7 @@
                     </div>
                 </a>
                 <p class="exper-titleAcad">
-                        Cursos e certificados
+                    Cursos e certificados
                 </p>
                 <a href="#" target="_blank">
                     <div class="exper-card">
@@ -318,8 +320,8 @@
                     <img src="img/Rectangle8.svg" alt="">
                 </div>
             </div>
-            <div class="three-projetos">
-                <div class="projetos-img">
+            <div class="three-projetos reverse">
+                <div class="projetos-img hide">
                     <img src="img/Rectangle8.svg" alt="">
                 </div>
                 <div>
@@ -341,7 +343,76 @@
 
                     </div>
                 </div>
+                <div class="projetos-img show none">
+                    <img src="img/Rectangle8.svg" alt="">
+                </div>
+            </div>
+            <div class="three-projetos">
+                <div>
+                    <p class="projetos-title">
+                        Projeto 01
+                    </p>
+                    <p class="projetos-SubTitle">
+                        Antecipa frete
+                    </p>
+                    <div class="container-projetosText">
+                        <p class="projetos-text">
+                            O setor de transporte de carga e frete desempenha um papel crucial na economia, conectando
+                            mercadorias aos consumidores e empresas. No entanto, os profissionais autônomos que realizam
+                            serviços de frete muitas vezes enfrentam desafios financeiros devido à demora no recebimento
+                            de pagamentos. O aplicativo "Antecipa Frete" foi desenvolvido para abordar essa questão,
+                            oferecendo uma solução inovadora para antecipar valores e melhorar a estabilidade financeira
+                            dos prestadores de serviços de frete.
+                        </p>
 
+                    </div>
+                </div>
+                <div class="projetos-img">
+                    <img src="img/Rectangle8.svg" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="four">
+            <div class="four-container1">
+                <div class="four-title">
+                    Vamos conversar?
+                </div>
+                <div class="four-subTitle">
+                    Fique à vontade para entrar em contato através do WhatsApp ou e-mail, para discutirmos sobre UX, UI
+                    e Front-end. Estou ansioso para uma conversa produtiva e troca de ideias.
+                </div>
+                <a href="https://wa.me/5583987953525" target="_blank">
+                <div class="container-contatIcon">
+                        <div class="icon-contact">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24"
+                                fill="none">
+                                <path
+                                    d="M12.0117 2C6.50572 2 2.02348 6.47837 2.02148 11.9844C2.02048 13.7444 2.48147 15.4626 3.35547 16.9766L2 22L7.23242 20.7637C8.69142 21.5597 10.3339 21.9775 12.0059 21.9785H12.0098C17.5148 21.9785 21.995 17.4991 21.998 11.9941C22 9.32514 20.9622 6.81573 19.0762 4.92773C17.1902 3.04073 14.6837 2.001 12.0117 2ZM12.0098 4C14.1458 4.001 16.1531 4.8338 17.6621 6.3418C19.1711 7.8518 20 9.85819 19.998 11.9922C19.996 16.3962 16.4138 19.9785 12.0078 19.9785C10.6748 19.9775 9.35441 19.6428 8.19141 19.0078L7.51758 18.6406L6.77344 18.8164L4.80469 19.2812L5.28516 17.4961L5.50195 16.6953L5.08789 15.9766C4.38989 14.7686 4.02048 13.3874 4.02148 11.9844C4.02348 7.58238 7.60677 4 12.0098 4ZM8.47656 7.375C8.30956 7.375 8.03955 7.4375 7.81055 7.6875C7.58155 7.9365 6.93555 8.53958 6.93555 9.76758C6.93555 10.9956 7.83008 12.1826 7.95508 12.3496C8.07908 12.5156 9.68175 15.1152 12.2188 16.1152C14.3268 16.9462 14.7549 16.7822 15.2129 16.7402C15.6709 16.6992 16.6904 16.1377 16.8984 15.5547C17.1064 14.9717 17.1069 14.4702 17.0449 14.3672C16.9829 14.2632 16.8164 14.2012 16.5664 14.0762C16.3174 13.9512 15.0903 13.3486 14.8613 13.2656C14.6323 13.1826 14.4648 13.1406 14.2988 13.3906C14.1328 13.6406 13.6558 14.2012 13.5098 14.3672C13.3638 14.5342 13.2188 14.5566 12.9688 14.4316C12.7188 14.3056 11.9149 14.0414 10.9609 13.1914C10.2189 12.5304 9.71827 11.7148 9.57227 11.4648C9.42727 11.2158 9.55859 11.0791 9.68359 10.9551C9.79559 10.8431 9.93164 10.6636 10.0566 10.5176C10.1806 10.3716 10.2236 10.2676 10.3066 10.1016C10.3896 9.93556 10.3472 9.78906 10.2852 9.66406C10.2232 9.53906 9.73763 8.3065 9.51562 7.8125C9.32862 7.3975 9.13113 7.38786 8.95312 7.38086C8.80813 7.37486 8.64256 7.375 8.47656 7.375Z"
+                                    fill="#0F8BFA" />
+                            </svg>
+                        </div>
+                        <div class="contact-text">
+                            (83) 98795-3525
+                        </div>
+                    </div>
+                </a>
+                <div class="container-contatIcon">
+                    <div class="icon-contact">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path
+                                d="M19 4H5C4.20435 4 3.44129 4.31607 2.87868 4.87868C2.31607 5.44129 2 6.20435 2 7V17C2 17.7956 2.31607 18.5587 2.87868 19.1213C3.44129 19.6839 4.20435 20 5 20H19C19.7956 20 20.5587 19.6839 21.1213 19.1213C21.6839 18.5587 22 17.7956 22 17V7C22 6.20435 21.6839 5.44129 21.1213 4.87868C20.5587 4.31607 19.7956 4 19 4V4ZM18.59 6L12.71 11.88C12.617 11.9737 12.5064 12.0481 12.3846 12.0989C12.2627 12.1497 12.132 12.1758 12 12.1758C11.868 12.1758 11.7373 12.1497 11.6154 12.0989C11.4936 12.0481 11.383 11.9737 11.29 11.88L5.41 6H18.59ZM20 17C20 17.2652 19.8946 17.5196 19.7071 17.7071C19.5196 17.8946 19.2652 18 19 18H5C4.73478 18 4.48043 17.8946 4.29289 17.7071C4.10536 17.5196 4 17.2652 4 17V7.41L9.88 13.29C10.4425 13.8518 11.205 14.1674 12 14.1674C12.795 14.1674 13.5575 13.8518 14.12 13.29L20 7.41V17Z"
+                                fill="#0F8BFA" />
+                        </svg>
+                    </div>
+                    <div class="contact-text">
+                        fabiano.antero@gmail.com
+                    </div>
+                </div>
+            </div>
+            <div class="four-container2">
+                <a href="https://www.linkedin.com/in/fabianoantero/" target="_blank">
+                    <img class="linkedin text-focus-in" width="150px" src="img/linkedin-b.svg" alt="" srcset="">
+                </a>
             </div>
         </section>
     </div>
