--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <section class="three">
             <div class="three-title">
                 <span>
-                    Novo Portfólio em contrução
+                    Portfólio
                 </span>
             </div>
             <div class="three-projetos">
