--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content=" UX Designer, UI Designer, buscando por um experiência de usuário incrivel?,
+    experiência do usuário, freela em UX/UI, interface do usuário">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fabiano UI&UX Designer</title>
     <link rel="stylesheet" href="css/style.css">
