--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="container-photo center">
-                <img class="photo text-focus-in" src="img/photo.svg" alt="" srcset="">
+                <img class="photo text-focus-in" src="img/photo.svg" width="100%">
             </div>
             <div class="container-linkedin">
                 <a href="https://www.linkedin.com/in/fabianoantero/" target="_blank">
