--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
                 </div>
                 <div class="fade-in-left4 container-buttom">
                     <a class="buttom" href="https://www.linkedin.com/in/fabianoantero/" target="_blank">Fale
-                        comigo <img class="icon" src="img/send.svg" alt="" srcset=""></a>
+                        comigo <img class="icon" src="img/send.svg" alt="botão para contatos" srcset=""></a>
                 </div>
             </div>
             <div class="container-photo center">
-                <img class="photo text-focus-in" src="img/photo.svg" width="100%">
+                <img class="photo text-focus-in" src="img/photo.svg" alt="Foto de Fabiano UX designer" width="100%">
             </div>
             <div class="container-linkedin">
                 <a href="https://www.linkedin.com/in/fabianoantero/" target="_blank">
-                    <img class="linkedin text-focus-in" src="img/linkedin.svg" alt="" srcset="">
+                    <img class="linkedin text-focus-in" src="img/linkedin.svg" alt="linkedin" srcset="">
                 </a>
             </div>
         </section>
@@ -67,7 +67,7 @@
                 <div class="container-buttom fade-in-left3">
                     <a class="buttom"
                         href="https://www.dropbox.com/scl/fi/ysj1cy2zpup82b61gebvd/Fabiano-Antero-CV-08-12-2023.pdf?rlkey=1yofifslkon7ub46nt2gb00hl&dl=0"
-                        target="_blank">Download CV<img class="icon" src="img/download.svg" alt="" srcset=""></a>
+                        target="_blank">Download CV<img class="icon" src="img/download.svg" alt="Download do curriculo" srcset=""></a>
                 </div>
                 <div class="exper fade-in-left">
                     <div class="exper-title">
@@ -413,7 +413,7 @@
             </div>
             <div class="four-container2">
                 <a href="https://www.linkedin.com/in/fabianoantero/" target="_blank">
-                    <img class="linkedin text-focus-in" width="150px" src="img/linkedin-b.svg" alt="" srcset="">
+                    <img class="linkedin text-focus-in" width="150px" src="img/linkedin-b.svg" alt="Qr code linkedin">
                 </a>
             </div>
         </section>
