Adição do portfólio

--- a/index.html
+++ b/index.html
@@ -301,76 +301,24 @@
             <div class="three-projetos">
                 <div>
                     <p class="projetos-title">
-                        Projeto 01
-                    </p>
+                        Estudo de caso - UX/UI Designer<img src="img/figma.png" alt="Logo Cash Advance" width="35px" class="figma">
+                    </p> <br>
                     <p class="projetos-SubTitle">
-                        Antecipa frete
+                        <img src="img/Logo-do-app.png" alt="Logo Cash Advance" width="50%"  srcset="">
                     </p>
                     <div class="container-projetosText">
                         <p class="projetos-text">
-                            O setor de transporte de carga e frete desempenha um papel crucial na economia, conectando
-                            mercadorias aos consumidores e empresas. No entanto, os profissionais autônomos que realizam
-                            serviços de frete muitas vezes enfrentam desafios financeiros devido à demora no recebimento
-                            de pagamentos. O aplicativo "Antecipa Frete" foi desenvolvido para abordar essa questão,
-                            oferecendo uma solução inovadora para antecipar valores e melhorar a estabilidade financeira
-                            dos prestadores de serviços de frete.
+                            O Cash Advance é um aplicativo inovador que busca resolver desafios financeiros enfrentados por autônomos no transporte de carga, oferecendo antecipação de valores para melhorar a estabilidade financeira dos prestadores de serviços de frete.
                         </p>
-
+                        
+                    </div>
+                    <div class="fade-in-left4 container-buttom">
+                        <a class="buttom_Portf" href="https://www.figma.com/file/1y4Kw6OlhsBroYlVeh1FHn/Cash-Advance?type=design&node-id=0-1&mode=design" target="_blank" rel="Estudo de caso Cash Advance">Ver Projeto</a>
                     </div>
                 </div>
                 <div class="projetos-img">
-                    <img src="img/Rectangle8.svg" alt="">
-                </div>
-            </div>
-            <div class="three-projetos reverse">
-                <div class="projetos-img hide">
-                    <img src="img/Rectangle8.svg" alt="">
-                </div>
-                <div>
-                    <p class="projetos-title">
-                        Projeto 01
-                    </p>
-                    <p class="projetos-SubTitle">
-                        Antecipa frete
-                    </p>
-                    <div class="container-projetosText">
-                        <p class="projetos-text">
-                            O setor de transporte de carga e frete desempenha um papel crucial na economia, conectando
-                            mercadorias aos consumidores e empresas. No entanto, os profissionais autônomos que realizam
-                            serviços de frete muitas vezes enfrentam desafios financeiros devido à demora no recebimento
-                            de pagamentos. O aplicativo "Antecipa Frete" foi desenvolvido para abordar essa questão,
-                            oferecendo uma solução inovadora para antecipar valores e melhorar a estabilidade financeira
-                            dos prestadores de serviços de frete.
-                        </p>
-
-                    </div>
-                </div>
-                <div class="projetos-img show none">
-                    <img src="img/Rectangle8.svg" alt="">
-                </div>
-            </div>
-            <div class="three-projetos">
-                <div>
-                    <p class="projetos-title">
-                        Projeto 01
-                    </p>
-                    <p class="projetos-SubTitle">
-                        Antecipa frete
-                    </p>
-                    <div class="container-projetosText">
-                        <p class="projetos-text">
-                            O setor de transporte de carga e frete desempenha um papel crucial na economia, conectando
-                            mercadorias aos consumidores e empresas. No entanto, os profissionais autônomos que realizam
-                            serviços de frete muitas vezes enfrentam desafios financeiros devido à demora no recebimento
-                            de pagamentos. O aplicativo "Antecipa Frete" foi desenvolvido para abordar essa questão,
-                            oferecendo uma solução inovadora para antecipar valores e melhorar a estabilidade financeira
-                            dos prestadores de serviços de frete.
-                        </p>
-
-                    </div>
-                </div>
-                <div class="projetos-img">
-                    <img src="img/Rectangle8.svg" alt="">
+                    <a href="https://www.figma.com/file/1y4Kw6OlhsBroYlVeh1FHn/Cash-Advance?type=design&node-id=0-1&mode=design" target="_blank" rel="Estudo de caso Cash Advance">
+                        <img src="img/Template-iPhoneSE.png" width="100%" alt="Imagem do aplicativo"></a>
                 </div>
             </div>
         </section>
