Adição do portfólio

--- a/index.html
+++ b/index.html
@@ -328,8 +328,7 @@
                     Vamos conversar?
                 </div>
                 <div class="four-subTitle">
-                    Fique à vontade para entrar em contato através do WhatsApp ou e-mail, para discutirmos sobre UX, UI
-                    e Front-end. Estou ansioso para uma conversa produtiva e troca de ideias.
+                    Fique à vontade para entrar em contato via WhatsApp ou e-mail para discutirmos sobre UX, UI e Front-end. Estou animado para uma conversa produtiva e troca de ideias.
                 </div>
                 <a href="https://wa.me/5583987953525" target="_blank">
                 <div class="container-contatIcon">
