Adição do portfólio

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content=" UX Designer, UI Designer, buscando por um experiência de usuário incrivel?,
+    <meta name="description" content=" 
+    Designer de UI&UX apaixonado por transformar visões em experiências memoráveis.
+    Com habilidades distintas em unir estética e usabilidade, estou pronto para dar
+    vida aos seus projetos de forma impactante.
+    UX Designer, UI Designer, buscando por uma experiência de usuário incrivel?,
     experiência do usuário, freela em UX/UI, interface do usuário">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fabiano UI&UX Designer</title>
@@ -67,7 +71,8 @@
                 <div class="container-buttom fade-in-left3">
                     <a class="buttom"
                         href="https://www.dropbox.com/scl/fi/ysj1cy2zpup82b61gebvd/Fabiano-Antero-CV-08-12-2023.pdf?rlkey=1yofifslkon7ub46nt2gb00hl&dl=0"
-                        target="_blank">Download CV<img class="icon" src="img/download.svg" alt="Download do curriculo" srcset=""></a>
+                        target="_blank">Download CV<img class="icon" src="img/download.svg" alt="Download do curriculo"
+                            srcset=""></a>
                 </div>
                 <div class="exper fade-in-left">
                     <div class="exper-title">
@@ -301,23 +306,29 @@
             <div class="three-projetos">
                 <div>
                     <p class="projetos-title">
-                        Estudo de caso - UX/UI Designer<img src="img/figma.png" alt="Logo Cash Advance" width="35px" class="figma">
+                        Estudo de caso - UX/UI Designer<img src="img/figma.png" alt="Logo Cash Advance" width="35px"
+                            class="figma">
                     </p> <br>
                     <p class="projetos-SubTitle">
-                        <img src="img/Logo-do-app.png" alt="Logo Cash Advance" width="50%"  srcset="">
+                        <img src="img/Logo-do-app.png" alt="Logo Cash Advance" width="50%" srcset="">
                     </p>
                     <div class="container-projetosText">
                         <p class="projetos-text">
-                            O Cash Advance é um aplicativo inovador que busca resolver desafios financeiros enfrentados por autônomos no transporte de carga, oferecendo antecipação de valores para melhorar a estabilidade financeira dos prestadores de serviços de frete.
+                            O Cash Advance é um aplicativo inovador que busca resolver desafios financeiros enfrentados
+                            por autônomos no transporte de carga, oferecendo antecipação de valores para melhorar a
+                            estabilidade financeira dos prestadores de serviços de frete.
                         </p>
-                        
+
                     </div>
                     <div class="fade-in-left4 container-buttom">
-                        <a class="buttom_Portf" href="https://www.figma.com/file/1y4Kw6OlhsBroYlVeh1FHn/Cash-Advance?type=design&node-id=0-1&mode=design" target="_blank" rel="Estudo de caso Cash Advance">Ver Projeto</a>
+                        <a class="buttom_Portf"
+                            href="https://www.figma.com/file/1y4Kw6OlhsBroYlVeh1FHn/Cash-Advance?type=design&node-id=0-1&mode=design"
+                            target="_blank" rel="Estudo de caso Cash Advance">Ver Projeto</a>
                     </div>
                 </div>
                 <div class="projetos-img">
-                    <a href="https://www.figma.com/file/1y4Kw6OlhsBroYlVeh1FHn/Cash-Advance?type=design&node-id=0-1&mode=design" target="_blank" rel="Estudo de caso Cash Advance">
+                    <a href="https://www.figma.com/file/1y4Kw6OlhsBroYlVeh1FHn/Cash-Advance?type=design&node-id=0-1&mode=design"
+                        target="_blank" rel="Estudo de caso Cash Advance">
                         <img src="img/Template-iPhoneSE.png" width="100%" alt="Imagem do aplicativo"></a>
                 </div>
             </div>
@@ -328,10 +339,11 @@
                     Vamos conversar?
                 </div>
                 <div class="four-subTitle">
-                    Fique à vontade para entrar em contato via WhatsApp ou e-mail para discutirmos sobre UX, UI e Front-end. Estou animado para uma conversa produtiva e troca de ideias.
+                    Fique à vontade para entrar em contato via WhatsApp ou e-mail para discutirmos sobre UX, UI e
+                    Front-end. Estou animado para uma conversa produtiva e troca de ideias.
                 </div>
                 <a href="https://wa.me/5583987953525" target="_blank">
-                <div class="container-contatIcon">
+                    <div class="container-contatIcon">
                         <div class="icon-contact">
                             <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24"
                                 fill="none">
