Adição do portfólio

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="#home" class="active">Inicio</a>
             <a href="#sobre">Sobre</a>
             <a href="#Portfólio">Portfólio</a>
-            <a href="#">Contato</a>
+            <a href="#contato">Contato</a>
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
           </div>
 
@@ -75,8 +75,8 @@
                 </div>
                 <div class="two-subTitle fade-in-left2">
                     <span>
-                        Bacharel em Ciência da Computação, atuando como UX/UI e desenvolvimento front-end. Transformo
-                        ideias em experiências visuais envolventes, focado em soluções intuitivas para otimizar a
+                        Bacharel de Ciência da Computação, atuando como UX/UI e desenvolvimento front-end.
+                        Transformo ideias em experiências visuais envolventes, focado em soluções intuitivas para otimizar a
                         experiência do usuário.
                     </span>
                 </div>
@@ -338,14 +338,14 @@
                             target="_blank" rel="Estudo de caso Cash Advance">Ver Projeto</a>
                     </div>
                 </div>
-                <div class="projetos-img">
+                <div class="projetos-img text-focus-in">
                     <a href="https://www.figma.com/file/1y4Kw6OlhsBroYlVeh1FHn/Cash-Advance?type=design&node-id=0-1&mode=design"
                         target="_blank" rel="Estudo de caso Cash Advance">
                         <img src="img/Template-iPhoneSE.png" width="100%" alt="Imagem do aplicativo"></a>
                 </div>
             </div>
         </section>
-        <section class="four">
+        <section id="contato" class="four">
             <div class="four-container1">
                 <div class="four-title">
                     Vamos conversar?
